out
xint.cpp: In member function ‘std::pair<std::vector<signed char>, std::vector<signed char> > Xint::divide(Xint&)’:
xint.cpp:424:15: error: invalid use of non-static member function ‘bool Xint::zero()’
  424 |       if( tmp == zero ) {
      |           ~~~~^~~~~~~
In file included from xint.cpp:1:
xint.h:20:8: note: declared here
   20 |   bool zero() { return (number.size() == 1 && number[0] == '\0') ? true : false; }
      |        ^~~~
xint.cpp:429:13: error: ‘class Xint’ has no member named ‘push_back’
  429 |         tmp.push_back(number[dig_pos]);
      |             ^~~~~~~~~
xint.cpp: In function ‘Xint& operator/=(Xint&, Xint&)’:
xint.cpp:441:37: warning: no return statement in function returning non-void [-Wreturn-type]
  441 | Xint &operator/=(Xint &a, Xint &b) {}
      |                                     ^
make: *** [Makefile:8: xint] Błąd 1
